syntax = "proto2";

message AgentMessage {
  message RegisterRequest {
    required string name = 1;
    optional string login = 2;
    optional string password = 3;
  }

  message StatusUpdate {
    required string status = 1;
  }

  message SettingUpdate {
    required string key = 1;
    required string value = 2;
  }

  message JoinDecision {
    message Accepted {
      map<string, string> settings = 1;
      required string requestId = 2;
    }
    message Declined {
      required string reason = 1;
      required string requestId = 2;
    }
    oneof message {
      Accepted accepted = 1;
      Declined declined = 2;
    }
  }

  oneof message {
    RegisterRequest register = 1;
    JoinDecision join = 2;
    StatusUpdate statusUpdate = 3;
    SettingUpdate settingUpdate = 4;
  }
}

message RegistryMessage {
  message RegisterResponse {
    required string connectionId = 1;
    required string login = 2;
    required string password = 3;
  }

  message Connected {
    required string name = 1;
    map<string, string> settings = 2;
    required string requestId = 3;
  }

  oneof message {
    RegisterResponse registered = 1;
    Connected connected = 2;
  }
}

service AgentEndpoint {
  rpc Register(stream AgentMessage) returns (stream RegistryMessage);
}